<resources>
    <string name="app_name">EmoDetect</string>
    <string name="action_settings">Settings</string>
    <string name="record_and_playback_tab_name">Record &amp; Playback</string>
    <string name="analyze_recordings_tab_name">Analyze</string>
    <string name="new_recording">CREATE NEW RECORDING</string>
    <string name="start_recording">START RECORDING</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="keep_recording">KEEP</string>
    <string name="discard_recording">DISCARD</string>
    <string name="error_necessary_permissions_denied">You did not grant EmoDetect the necessary permissions to run! EmoDetect will quit.</string>
    <string name="error_recording_already_exists">A recording with that name already exists. Please enter an alternative name!</string>
    <string name="error_recording_name_field_empty">The name input field was left blank. Please enter a name for the new recording!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="web_service_URL_preference_title">Web Service URL</string>
    <string name="web_service_URL_preference_summary">http://192.168.0.127:8080/HelloWorldAttempt/resources/greeting</string>
    <string name="web_service_URL_dialog_title">EmoDetect Web Service URL</string>
    <string name="web_service_URL_dialog_message">Please enter the URL of your EmoDetect web service</string>

    <string name="emotion_classification_method_selection_list_title">Emotion Classification Method</string>

    <!-- Settings' default values -->
    <string name="default_web_service_URL">http://192.168.0.127:8080/HelloWorldAttempt/resources/greeting</string>
    <string name="default_emotion_classification_method">1</string>
</resources>
